# vector-search

./: compose.yaml  package.json  pnpm-lock.yaml
apps/ai/: .env.example  README.md  moon.yml  pyproject.toml
apps/ai/app/: main.py
apps/ai/app/router/: embedding.py  root.py
apps/ai/app/schemas/: embedding.py
apps/ai/app/services/: dependency.py  embedding.py
apps/go-app/: README.md  go.mod  go.sum  main.go
apps/go-app/cmd/commands/: seed.go
apps/go-app/config/: config.go
apps/go-app/database/: postgres.go
apps/go-app/domain/: embedding.go  journal.go
apps/go-app/internal/repository/http/: embedding.go
apps/go-app/internal/repository/postgres/: journal.go
apps/go-app/internal/rest/: journal.go  journal_test.go
apps/go-app/migrations/: 20251206120846_create_journal_table.sql  20251222095249_create_journal_generalist_embeddings.sql  20251222095558_create_journal_specialist_embeddings.sql
apps/go-app/service/: journal.go  journal_test.go
apps/go-app/service/mocks/: EmbeddingHTTPRepository.go  JournalRepository.go
docker/_stacks_/: clickhouse.yaml  mailpit.yaml  minio.yaml  postgres.yaml  redis.yaml
