[project]
name = "ai"
version = "0.1.0"
description = "Artificial Intelligence App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "openai>=v1.93.0",
    "asyncpg>=0.30.0",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prometheus-client>=0.22.1",
    "transformers>=4.57.3",
    "torch>=2.9.1",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
